themes/brand/sass/components/_panel.scss
/* Masonry panel styling */

.panel-container {
	margin-bottom: 250px;
	position: relative;

	@include respond(document-width) {
		margin-top: -70px;

		&.has-contentpanel {
			margin-top: 0px;
		}
	}
	@include respond(all-phones) {
		margin-bottom: 0;
	}
}

.panel {
	@include box-sizing(border-box);
	margin: 0;
	margin-bottom: -1px;
	float: left;
	@include transition-property(all);
	@include transition-duration(0.3s);

	&.panel-seperate {
		padding: 0px 10px 20px 10px;
	}

	.img-wrap {
		float: right;
		margin-left: 50px;
	}

	&.three {
		width: (100% /4);
		.img-wrap {
			float: none;
			margin-left: 0;
		}
	}
	&.four {
		width: (100% /3);
		.img-wrap {
			float: none;
			margin-left: 0;
		}
	}
	&.eight {
		width: (100% /4 * 2);
	}
	&.nine {
		width: (100% /4 * 3);
	}
	&.six {
		width: (100% /2);
	}
	&.twelve {
		width: 100%;
	}

	&--nav {
		// fall back to the main header navigation
		@include respond(all-phones) {
			display: none;
		}

		@include respond(print) {
			display: none;
		}
		
		a.section,
		.navinner-section > a,
		.active > a {
			font-weight: 800;
		}


		.nav-level1.active,
		.nav-section {
			border-top: 2px solid transparent;
			border-bottom: 4px solid transparent;
			background: rgba(0, 0, 0, 0.02);
			padding: 10px 50px;
			margin: 0 -50px;
		}

		.panel-block {
			padding: 50px;

			> .nav-list {
				> li {

					a {
						line-height: 1.5em;
					}

					> a {
						display: block;
						padding: 10px 0 5px;
					}

					&.nav-section  {
						> a {
							padding: 10px 0;
						}
					}

					> ul {
						font-size: 0.8em;
						padding-top: 5px;
						margin-left: 0;

						ul {
							font-size: 1em;
							margin-left: 15px;
						}
					}

					ul a {
						padding: 2px 0;
						display: block;
					}
				}
			}
		}
	}


	@include respond(portrait-tablets) {
		@include transition-property(all);
		@include transition-duration(0.3s);

		&.four,
		&.three {
			min-width: 50%;
		}
		&.eight {
			min-width: 100%;
		}
		&.six {
			min-width: 100%;
		}
		&.twelve {
			min-width: 100%;
		}
	}

	@include respond(all-phones) {
		@include transition-property(all);
		@include transition-duration(0.3s);

		padding: 0px;

		&.four,
		&.three {
			min-width: 100%;
		}
		&.eight {
			min-width: 100%;
			.img-wrap {
				float: none;
				margin-left: 0;
			}
		}
		&.six {
			min-width: 100%;
			.img-wrap {
				float: none;
				margin-left: 0;
			}
		}
		&.twelve {
			min-width: 100%;
			.img-wrap {
				float: none;
				margin-left: 0;
			}
		}
	}


	&::selection {
		background: transparent;
	}

	&.panel-content {

		position: relative;
		@include respond(document-width) {
			margin-top: -70px;
			margin-bottom: 30px;
		}

		@include respond(print) {
			width: 100% !important;
		}
	}

	.panel-block {
		@include transition-property(background-color, color);
		@include transition-duration(0.3s);

		color: #333;
		display: block;
		margin: 0px;
		height: 100%;
		width: 100%;
		position: relative;

		@include respond(print) {
			box-shadow: none !important;
		}
	}
	a.panel-block,
	.listing {
		&:hover,
		&:focus {
			z-index: 2;
		}
	}

	.content {
		@include clearfix;
		padding: 0px 50px 0px;

		@include respond(all-phones) {
			padding: 0px 20px 20px;
		}

		p:last-child {
			margin-bottom: 50px;
		}

		&.content--noheader {
			padding-top: 50px;
			@include respond(all-phones) {
				padding-top: 30px;
			}
		}

		&.has-images {
			text-align:left;
			.listing-item {
				float:left;
				width:100%;
			}
			.img-wrap, .img-placeholder {
				margin:25px 0;
				width:35%;
				float:left;
				height:100%;
				overflow:hidden;
			}
			.first .img-wrap {
				margin-top:5px;
			}
			.text-block {
				@include clearfix;
				width:65%;
				float:left;
				padding-left:30px;
			}
			h4 {
				font-size:18px;
			}
		}
	}

	.listing-item {

		p:last-child {
			margin-bottom: 0;
		}

		a {
			display: block;
			@include transition-property(background, color);
			@include transition-duration(0.3s);
			padding: 15px 0;
			position: relative;

			&:hover,
			&:focus {
				background: #f7f7f7;
				z-index: 2;
			}

			h4 {
				position: relative;

				&:before {
					content: "";
					width: auto;
					left: 50px;
					right: 50px;
					top: -15px;
					position: absolute;
					border-bottom: 1px solid #f7f7f7;

					@include respond(all-phones) {
						left: 20px;
						right: 20px;
					}
				}
			}
		}
	}

	/* Typography styles within masonry features */

	// We want a dark background so hover will darken the image
	.img-wrap {
		background: #000;
	}

	img {
		display: block;
		margin-bottom: 0;
		padding-bottom: 0;
		margin-left: auto;
		margin-right: auto;
		@include respond(portrait-phones) {
			width: 100%;
		}
	}

	h3.panel-heading {
		padding: 50px 50px 0;
		@include respond(all-phones) {
			padding: 30px 20px 0;
			font-size: 25px;
		}
		.subhead {
			display: block;
			font-size: 0.5em;
			text-transform: uppercase;
		}
	}

	h4.panel-heading {
		border-bottom: 0;
		padding: 0px 50px;

		@include respond(all-phones) {
			font-size: 18px;
			padding: 0px 20px 0;
		}
	}

	h3, h4 {
		.subhead {
			display: block;
			font-size: 0.5em;
		}
	}


	.meta-data {
		margin-bottom: 5px;
	}
}

